# 15puzzle

./: .gitignore  README.md  build.sh  index.html  main.css  main.js  package.json  tsconfig.json  webpack.config.js
esbuild/: config.mjs
esbuild/plugins/: cleanup.mjs  htmlgen.mjs
rust/: main.rs
src/: index.html  index.js  index.ts  style.css
src/game/: board.ts  lockedTiles.ts  shuffle.ts  solve.ts  test.ts
src/misc/: priorityQueue.test.ts  priorityQueue.ts
wasm-15puzzle/: Cargo.toml
wasm-15puzzle/src/: lib.rs  solver.rs
